[tool.poetry]
name = "ml-project-housing-prices"
version = "0.1.0"
description = ""
authors = ["usserra <123895232+usserra@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_project_housing_prices"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.3"
seaborn = "^0.12.2"
keras = "^2.13.1"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"
numpy = ">=1.19,<=1.24.3"
matplotlib = "^3.7.2"
xgboost = "^1.7.6"
scikit-optimize = "^0.9.0"
optuna = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
